fix: code editor output on dark mode also fixed todo cards color in light mode

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@
   color: black;
 }
 
-.react-kanban-card {
+.dark .react-kanban-card {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(17, 25, 40, 0);
@@ -143,7 +143,7 @@
 }
 
 @media (max-width: 1400px) {
-  .react-kanban-card, .react-kanban-card-adder-form, .react-kanban-card-skeleton {
+  .dark .react-kanban-card, .react-kanban-card-adder-form, .react-kanban-card-skeleton {
     border: 2px;
     background-color: black;
     box-sizing: border-box;
